tests/baselines/reference/classExtendsInterfaceThatExtendsClassWithPrivates1.errors.txt
tests/cases/compiler/classExtendsInterfaceThatExtendsClassWithPrivates1.ts(10,7): error TS2420: Class 'D2' incorrectly implements interface 'I'.
  Types have separate declarations of a private property 'x'.


==== tests/cases/compiler/classExtendsInterfaceThatExtendsClassWithPrivates1.ts (1 errors) ====
    class C {
        public foo(x: any) { return x; }
        private x = 1;
    }
    
    interface I extends C {
        other(x: any): any;
    }
    
    class D2 implements I {
          ~~
!!! error TS2420: Class '{|D2|0|}' incorrectly implements interface '{|I|1|}'.
!!! error TS2420:   Types have separate declarations of a private property 'x'.
!!! annotated symbol 0 tests/cases/compiler/classExtendsInterfaceThatExtendsClassWithPrivates1.ts:10:7
!!! annotated symbol 1 tests/cases/compiler/classExtendsInterfaceThatExtendsClassWithPrivates1.ts:6:11
        public foo(x: any) { return x }
        private x = 3;
        other(x: any) { return x }
    } 